# ueye-frame-streamer

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.txt  build.sh
.devcontainer/: Dockerfile  clang-format  devcontainer.json
cmake/: instlib.cmake  spdlog.txt.in  xerces-c.txt.in
definitions/TagGroup/com.vision.data/: DeviceInfoTagGroup.json
definitions/ThingClass/com.adlinktech.aea-frame-streamer/: FrameStreamerClass.json  FrameStreamerProperties.json
docs/releasenotes/source/: Ch-3rdPartyNotices.rst  Ch-ChangeLog.rst  Ch-KnownIssues.rst  docsettings.py  index.rst
docs/userguide/source/: Ch-Configuration.rst  Ch-Contacts.rst  Ch-Introduction.rst  Ch-Licensing.rst  Ch-ThingConcept.rst  docsettings.py  index.rst
scripts/: buildDocs.sh
src/: ApplicationConfig.cpp  ApplicationConfig.h  aea-ueye-frame-streamer.cpp
vortexedge/docs/adlinktech/aea-basler-frame-streamer/: toc.xml
vortexedge/metadata/: name
vortexedge/metadata/adlinktech/aea-basler-frame-streamer/: from
vortexedge/metadata/adlinktech/aea-basler-frame-streamer/release/: phase
vortexedge/metadata/config/: UEyeFrameStreamer.xsd
vortexedge/metadata/config/default/: UEyeFrameStreamer.xml
